--- a/src/fileupload.css
+++ b/src/fileupload.css
@@ -1,31 +1,33 @@
-.App {
-  position: relative;
-  width: 100%;
-  height: 100vh;
+body, html {
+  height: 100%;
+  margin: 0;
   overflow: hidden;
-  text-align: center;
-  padding-top: 80px; /* Add padding to avoid overlap with Navbar */
-  padding-bottom: 50px; /* Add padding to avoid overlap with Footer */
-}
-
-.content {
-  position: relative;
-  z-index: 2; /* Ensure it is above the Pattern component */
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100% - 130px); /* Adjust height to account for Navbar and Footer */
-  width: 100%;
 }
 
 .file-upload-container {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #444;
   border-radius: 10px;
-  background-color: rgba(34, 34, 34, 0.8); /* Dark background to match the pattern */
-  color: #f1f1f1; /* Light text color */
+  background-color: rgba(34, 34, 34, 0.8);
+  color: #f1f1f1;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  position: relative; /* Ensure it stays in place */
+  top: 50px; /* Add some space from the top to avoid overlapping with the navbar */
+}
+
+.file-upload-container:hover {
+  transform: scale(1.08);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.file-upload-container.no-hover:hover {
+  transform: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -57,11 +59,22 @@ input[type="file"] {
 .response {
   margin-top: 20px;
   padding: 10px;
-  background-color: #f9f9f9;
+  background-color: rgba(34, 34, 34, 0.8);
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #444;
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow: auto;
   max-height: 300px;
+}
+
+.response h2 {
+  font-family: cursive;
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  color: #f1f1f1;
+  font-family: cursive;
 }
